# code-fragments

./: .vimrc  README.md
8-puzzle/: puzzle.h  simulated-annealing.h  test-climbing.cpp
8-queens/: simulated-annealing.h
configs/: .vimrc
configs/tmux/: .tmux.conf
configs/vim/: cpp-operator-highlight.vim  init.vim  vinalx-atom.vim  vinalx-dark-theme.vim
configs/vscode/: vscode-ex  vscode-pref.json
configs/zsh/: .zshrc  risto.zsh-theme
cpu-mips-helper/: mips.h  util.h
cpu-mips-helper/src/: instruction.h  util.h
des/: des.h  main.cpp
homework/des/: des.h  (+1 more)
idris-practice/: DecEqEx.idr  Decide.idr  Guess.idr  Reverse.idr  Snoc.idr  StackIO.idr  TakeN.idr  ViewEx.idr
learn-java-swing/: CenteredText.java  FirstComponent.java  FirstFrame.java  Main.java
learn-template-metaprogramming/: static_assert.h  tmp-quicksort.cpp
llvm-tutorial/: kaleidoscope.cpp
md5/: main.cpp  md5.h
practice/haskell-practice/tryParsec/: tryParsec.cabal
scala-playground/: build.sbt
simple-arith-calculator/: Parser.h  Scanner.cpp  Scanner.h  Token.h  main.cpp
tour-of-fp-sample/: currying-pre.h  currying.cpp  currying.h  functor.h  io.cpp  io.h  lazy.cpp  lazy.h  optional-monad-pre.cpp  optional-monad.h  partial-application.cpp  totality.h  type.h
tour-of-types-sample/: Animal.java  NotSoWeak.java  Reference.java  aggregate.c  array.go  bounded.scala  c2.c  dependent.idr  function.scala  induction.idr  predicate.idr  prop-intro.c  prop-intro.hs  structural.ts
try-cpp-features/: print-tuple-with-index-sequence.cpp
try-webgl/: index.html  package-lock.json  script.ts
(+158 files in other folders)
