name:                tryParsec
version:             0.1.0.0
-- synopsis:
-- description:
maintainer:          vinaleux@gmail.com
copyright:           2017 VinaLx
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Try.CSV, Try.JSON
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       containers
  default-language:    Haskell2010

executable tryParsec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tryParsec
  default-language:    Haskell2010

test-suite tryParsec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tryParsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
